--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "autils",
   "version": "0.0.1",
   "description": "this is javascript utils lib",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:3lang3/autils.git"
+  },
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
