--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "type": "git",
     "url": "git@github.com:3lang3/autils.git"
   },
-  "main": "index.js",
+  "main": "lib/utilbag.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "rm -rf lib",
+    "build": "npm run clean && rollup -c",
+    "test": "mocha ./test/*.spec.js"
   },
   "keywords": [
     "util",
@@ -16,5 +18,8 @@
     "helper"
   ],
   "author": "3lang3",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "mocha": "^8.0.1"
+  }
 }
